# practice

./: CMakeLists.txt
play/: play.c
src/: funcs.c  funcs.h  header.c  header.h  main.c  note.c  note.h  notearr.c  notearr.h  selection_sort.c
task1/: CMakeLists.txt  selection_sort.c  selection_sort.h
task1/src/: selection_sort.h
task1/tests/: dl_speedtest.c  selection_sort_test.c  shared_speedtest.c  static_speedtest.c
tests/: selection_sort_test.c  shared_speedtest.c  static_speedtest.c
